Moved peritonitis table in to a partial, fixed error in accordian for episode type.

--- a/app/views/patients/pd_info.html.haml
+++ b/app/views/patients/pd_info.html.haml
@@ -15,127 +15,8 @@
 
   %h5
     = link_to "Record an Episode of Peritonitis", new_patient_peritonitis_episode_path(@patient)
-  
-  %ul.no-bullet
-                              
-    %table.responsive
-      %thead
-        %th.table-width 
-          Diagnosis Date
-        %th.table-width 
-          Start Treatment Date
-        %th.table-width 
-          End Date
-        %th.table-width 
-          Causes/ Symptoms
-        %th.table-width 
-          Organisms
-        %th.table-width 
-          Episode Type
-        %th.table-width 
-          Notes
-        %th.table-width 
-          White Cell Count
-        %th.table-width 
-          Antibiotics
-        %th.table-width 
-          Entered By
-        %th.table-width 
-          Last Updated
-        %th.table-width 
-          Action
-    
-      %tbody
-        - @peritonitis_episodes.each do |p|
-          %tr{ valign: "top" }        
-            %td{:data => { :heading => "Diagnosis Date" }, valign: "top"}
-              = p.diagnosis_date.strftime("%d/%m/%Y")
-            %td{:data => { :heading => "Start Date"}, valign: "top"}
-              = p.start_treatment_date.strftime("%d/%m/%Y")
-            %td{:data => { :heading => "End Date"}, valign: "top"}
-              = p.end_treatment_date.strftime("%d/%m/%Y")
-            %td{ :data => { :heading => "Organisms"}, valign: "top" } 
-              %dl.accordion{ data: { accordion: true } }
-                %dd.accordion-navigation
-                  %a.fi-plus.fi-minus.toggle-notes{ :id => "patient-peritonitis-cause-#{p.id}", href: "#patient-peritonitis-cause-#{p.id}" }
-                    View
-                  .content.toggle-content{ :id => "patient-peritonitis-cause-#{p.id}" }
-                    %ul.no-bullet
-                      %li 
-                        = "Line Break: #{p.line_break},"
-                      %li
-                        = "Exit Site Infection: #{p.exit_site_infection}"
-                      %li
-                        = "Diarrhoea: #{p.diarrhoea}"
-                      %li
-                        = "Abdominal Pain: #{p.abdominal_pain}"
-              
-            %td{ :data => { :heading => "Organisms"}, valign: "top" } 
-              %dl.accordion{ data: { accordion: true } }
-                %dd.accordion-navigation
-                  %a.fi-plus.fi-minus.toggle-notes{ :id => "patient-peritonitis-organism-#{p.id}", href: "#patient-peritonitis-organism-#{p.id}" }
-                    View
-                  .content.toggle-content{ :id => "patient-peritonitis-organism-#{p.id}" }
-                    %ul.no-bullet
-                      %li 
-                        = "Organism 1: #{p.organism_1},"
-                      %li
-                        = "Organism 2: #{p.organism_2}"
-            
-            %td{ :data => { :heading => "Organisms"}, valign: "top" } 
-              %dl.accordion{ data: { accordion: true } }
-                %dd.accordion-navigation
-                  %a.fi-plus.fi-minus.toggle-notes{ :id => "patient-peritonitis-organism-#{p.id}", href: "#patient-peritonitis-organism-#{p.id}" }
-                    = p.episode_type
-                  .content.toggle-content{ :id => "patient-peritonitis-organism-#{p.id}" } 
-                    = "Catheter Removed: #{p.catheter_removed}"
                                 
-            %td{:data => { :heading => "Description" }, valign: "top"}
-              %dl.accordion{data: {accordion: true} }
-                %dd.accordion-navigation
-                  %a.fi-plus.fi-minus.toggle-notes{ :id => "patient-peritonitis-notes-#{p.id}", href: "#patient-peritonitis-notes-#{p.id}" }
-                    View
-                  .content.toggle-content{ :id => "patient-peritonitis-notes-#{p.id}" } 
-                    = p.notes
-            
-            %td{ :data => { :heading => "White Cell Count"}, valign: "top" } 
-              %dl.accordion{ data: { accordion: true } }
-                %dd.accordion-navigation
-                  %a.fi-plus.fi-minus.toggle-notes{ :id => "patient-peritonitis-white-cell-#{p.id}", href: "#patient-peritonitis-white-cell-#{p.id}" }
-                    = "Total: #{p.white_cell_total}"
-                  .content.toggle-content{ :id => "patient-peritonitis-white-cell-#{p.id}" } 
-                    = "Neutro: #{p.white_cell_neutro}%,"
-                    = "Lympho: #{p.white_cell_lympho}%,"
-                    = "Degen: #{p.white_cell_degen}%,"
-                    = "Other: #{p.white_cell_other}%"
-
-            %td{ :data => { :heading => "Antibiotics"}, valign: "top" } 
-              %dl.accordion{ data: { accordion: true } }
-                %dd.accordion-navigation
-                  %a.fi-plus.fi-minus.toggle-notes{ :id => "patient-peritonitis-antibiotics-#{p.id}", href: "#patient-peritonitis-antibiotics-#{p.id}" }
-                    View 
-                  .content.toggle-content{ :id => "patient-peritonitis-antibiotics-#{p.id}" } 
-                    %ul.no-bullet
-                      %li.toggle-content
-                        = "Antibiotic: #{p.antibiotic_1}, Route: #{p.antibiotic_1_route},"
-                      %li.toggle-content
-                        = "Antibiotic: #{p.antibiotic_2}, Route: #{p.antibiotic_2_route},"
-                      %li.toggle-content
-                        = "Antibiotic: #{p.antibiotic_3}, Route: #{p.antibiotic_3_route},"
-                      %li.toggle-content
-                        = "Antibiotic: #{p.antibiotic_4}, Route: #{p.antibiotic_4_route},"
-                      %li.toggle-content
-                        = "Antibiotic: #{p.antibiotic_5}, Route: #{p.antibiotic_5_route},"
-                     
-
-            %td{:data => { :heading => "Entered By"}, valign: "top"}
-              = p.user_id
-
-            %td{:data => { :heading => "Last Updated"}, valign: "top"}
-              = p.updated_at.strftime("%d/%m/%Y, %H:%M")
-
-            %td{:data => { :heading => "Entered By"}, valign: "top"}
-              = link_to "Update", edit_patient_peritonitis_episode_path(@patient, p.id)
+  = render partial: "patients/peritonitis_table"
           
 .wide-screen
   = content_for :secondary_nav do  
