--- a/app/views/patients/pd_info.html.haml
+++ b/app/views/patients/pd_info.html.haml
@@ -10,14 +10,22 @@
     = link_to "PD Info", pd_info_patient_path(@patient)
 
 .wide-screen
-  %h4
+  %h5
     = "Peritonitis Episode (#{@patient.peritonitis_episodes.length})"
 
-  %h5
+  %h6
     = link_to "Record an Episode of Peritonitis", new_patient_peritonitis_episode_path(@patient)
                                 
   = render partial: "patients/peritonitis_table"
-          
+
+  %h5
+    = "Exit Site Infections (#{@patient.peritonitis_episodes.length})"
+
+  %h6
+    = link_to "Record an Exit Site Infection", new_patient_exit_site_infection_path(@patient)
+
+  = render partial: "patients/exit_site_table"
+                                  
 .wide-screen
   = content_for :secondary_nav do  
     = render partial: "patients/clin_sum_sub_nav", locals: { model: @patient }
