--- a/app/views/patients/_exit_site_table.html.haml
+++ b/app/views/patients/_exit_site_table.html.haml
@@ -74,6 +74,8 @@
                     = "Antibiotic: #{e.antibiotic_2}, Route: #{e.antibiotic_2_route},"
                   %li.toggle-content
                     = "Antibiotic: #{e.antibiotic_3}, Route: #{e.antibiotic_3_route},"
+                  %li.toggle-content
+                    = "Sensitivities: #{e.sensitivities}"
                   
         %td{:data => { :heading => "Entered By"}, valign: "top"}
           = e.user_id
@@ -82,4 +84,4 @@
           = e.updated_at.strftime("%d/%m/%Y, %H:%M")
 
         %td{:data => { :heading => "Action"}, valign: "top"}
-          / = link_to "Update", edit_patient_peritonitis_episode_path(@patient, e.id)
+          = link_to "Update", edit_patient_exit_site_infection_path(@patient, e.id)
