Update peritonitis display table to include sensitivities in antibiotic column, updated related cuke test.

--- a/app/views/patients/_peritonitis_table.html.haml
+++ b/app/views/patients/_peritonitis_table.html.haml
@@ -106,7 +106,8 @@
                     = "Antibiotic: #{p.antibiotic_4}, Route: #{p.antibiotic_4_route},"
                   %li.toggle-content
                     = "Antibiotic: #{p.antibiotic_5}, Route: #{p.antibiotic_5_route},"
-                 
+                  %li.toggle-content
+                    = "Sensitivities: #{p.sensitivities}"
 
         %td{:data => { :heading => "Entered By"}, valign: "top"}
           = p.user_id
