Updated patient medication form 'route' field to use changed referenced 'route' options dropdown

--- a/app/views/patients/_patient_medication_fields.html.haml
+++ b/app/views/patients/_patient_medication_fields.html.haml
@@ -25,7 +25,7 @@
   = pm.text_field :dose
 
   = pm.label :route, "Route"
-  = pm.select :route, route_options
+  = pm.select :route, medication_routes(pm.object.class.name.constantize), { prompt: "Please select route of administration" }
 
   = pm.label :frequency, "Frequency & Duration"
   = pm.text_field :frequency
