Updated peritonitis/exit site forms and PD_info table views with edited organism field format.

--- a/app/views/exit_site_infections/_form.html.haml
+++ b/app/views/exit_site_infections/_form.html.haml
@@ -9,11 +9,11 @@
   = e.label :diagnosis_date
   = e.date_select(:diagnosis_date, {start_year: (120.years.ago).year, end_year: Time.now.year, order: [:day, :month, :year]}, class: "datetime")     
   
-  = e.label :organism_1
-  = e.text_field :organism_1
+  = e.label :organism_1_id
+  = e.collection_select :organism_1_id, OrganismCode.all, :id, :name, { :prompt => "Please Select Organism Found", include_blank: true, :class => "organism-select" }
 
-  = e.label :organism_2
-  = e.text_field :organism_2
+  = e.label :organism_2_id
+  = e.collection_select :organism_2_id, OrganismCode.all, :id, :name, { :prompt => "Please Select Organism Found", include_blank: true, :class => "organism-select" }
 
   = e.label :treatment
   = e.text_area :treatment, :cols => 50, :rows => 6
@@ -24,20 +24,20 @@
   = e.label :notes
   = e.text_area :notes, :cols => 50, :rows => 6
 
-  = e.label :antibiotic_1
-  = e.text_field :antibiotic_1
+  = e.label :antibiotic_1_id
+  = e.text_field :antibiotic_1_id
 
   = e.label :antibiotic_1_route, "Route (Antibiotic 1)"
   = e.select :antibiotic_1_route, medication_routes(e.object.class.name.constantize), { prompt: "Please select route of administration" } 
 
-  = e.label :antibiotic_2
-  = e.text_field :antibiotic_2
+  = e.label :antibiotic_2_id
+  = e.text_field :antibiotic_2_id
 
   = e.label :antibiotic_2_route, "Route (Antibiotic 2)"
   = e.select :antibiotic_2_route, medication_routes(e.object.class.name.constantize), { prompt: "Please select route of administration" } 
 
-  = e.label :antibiotic_3
-  = e.text_field :antibiotic_3
+  = e.label :antibiotic_3_id
+  = e.text_field :antibiotic_3_id
 
   = e.label :antibiotic_3_route, "Route (Antibiotic 3)"
   = e.select :antibiotic_3_route, medication_routes(e.object.class.name.constantize), { prompt: "Please select route of administration" } 
