--- a/app/views/patients/_exit_site_table.html.haml
+++ b/app/views/patients/_exit_site_table.html.haml
@@ -33,9 +33,9 @@
               .content.toggle-content{ :id => "patient-exit-site-organism-#{e.id}" }
                 %ul.no-bullet
                   %li 
-                    = "Organism 1: #{e.organism_1},"
+                    = "Organism 1: #{e.organism_1.name},"
                   %li
-                    = "Organism 2: #{e.organism_2}"
+                    = "Organism 2: #{e.organism_2.name}"
                                             
         %td{:data => { :heading => "Treatment" }, valign: "top"}
           %dl.accordion{data: {accordion: true} }
@@ -69,11 +69,11 @@
               .content.toggle-content{ :id => "patient-exit-site-antibiotics-#{e.id}" } 
                 %ul.no-bullet
                   %li.toggle-content
-                    = "Antibiotic: #{e.antibiotic_1}, Route: #{e.antibiotic_routes.first.name},"
+                    = "Antibiotic: #{e.antibiotic_1_id}, Route: #{e.antibiotic_routes.first.name},"
                   %li.toggle-content
-                    = "Antibiotic: #{e.antibiotic_2}, Route: #{e.antibiotic_routes.second.name},"
+                    = "Antibiotic: #{e.antibiotic_2_id}, Route: #{e.antibiotic_routes.second.name},"
                   %li.toggle-content
-                    = "Antibiotic: #{e.antibiotic_3}, Route: #{e.antibiotic_routes.third.name},"
+                    = "Antibiotic: #{e.antibiotic_3_id}, Route: #{e.antibiotic_routes.third.name},"
                   %li.toggle-content
                     = "Sensitivities: #{e.sensitivities}"
                   
