Corrected typo in peritonitis table view on PD_info view page.

--- a/app/views/patients/_peritonitis_table.html.haml
+++ b/app/views/patients/_peritonitis_table.html.haml
@@ -5,7 +5,7 @@
     %th.table-width 
       Start Treatment Date
     %th.table-width 
-      End Date
+      End Treatment Date
     %th.table-width 
       Causes/ Symptoms
     %th.table-width 
