Adjusted styling for peritonitis episodes form.

--- a/app/assets/stylesheets/foundation/globals.css.scss
+++ b/app/assets/stylesheets/foundation/globals.css.scss
@@ -9,6 +9,16 @@ body > .flash-notice {
   z-index: 1;
 } 
 
+fieldset {
+  border-radius: 1em;
+  padding: 2em;
+}
+
+.form-section {
+  border-bottom: #008cba solid 0.1em;
+  margin: 0.5em;
+}
+
 .g-center {
   text-align: center;
 }
