Updated peritonitis_episodes attribute episode_type to episode_type_id.

--- a/app/views/patients/_peritonitis_table.html.haml
+++ b/app/views/patients/_peritonitis_table.html.haml
@@ -68,7 +68,7 @@
           %dl.accordion{ data: { accordion: true } }
             %dd.accordion-navigation
               %a.fi-plus.fi-minus.toggle-notes{ :id => "patient-peritonitis-episode-type-#{p.id}", href: "#patient-peritonitis-episode-type-#{p.id}" }
-                = p.episode_type
+                = p.episode_type_id
               .content.toggle-content{ :id => "patient-peritonitis-episode-type-#{p.id}" } 
                 = "Catheter Removed: #{p.catheter_removed}"
                             
